fix: improve process on /var documentation

--- a/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28504.md
+++ b/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28504.md
@@ -1,102 +1,182 @@
-## Create `/var` Partition
 
-### Preliminary Backup Step
+## Create a Separate `/var` Partition
 
-Before proceeding, ensure you have a recent backup of critical data:
+### 1. Preliminary Checks and Backup
 
-```bash
-sudo rsync -avh --progress /var/ /path/to/backup/var_backup_
-```
+#### a. Check Current `/var` Size on the Installed System
+Before resizing or creating a new partition, note how much space `/var` is currently using and plan a suitable new partition size (allowing some headroom for growth).
 
-Verify the backup completed successfully before moving on.
+1. Boot normally into your installed Ubuntu system.
+2. Open a terminal and run:
+   ```bash
+   sudo du -sh /var
+   sudo df -h /var
+   ```
 
-### Phase 1: Prepare the Environment (Live USB)
+* `du -sh /var` show s the total size of existing data in `/var`.
+* `df -h /var` shows the current filesystem usage and free space.
+
+3. Based on these outputs, decide on a target size for the new `/var` partition. For example, if `/var` is currently 20 GiB, you might allocate 30 GiB or more, depending on expected growth.
+
+#### b. Backup Existing `/var` Data (Optional: from Installed System)
+
+It’s good practice to back up `/var` before partition changes. You can back up while booted normally or wait until the Live USB session. Examples below assume you have an external drive or network location mounted at `<BACKUP_DESTINATION>`.
+
+1. Ensure `<BACKUP_DESTINATION>` is accessible and has enough free space.
+2. Run:
+
+   ```bash
+   sudo rsync -avh --progress /var/ <BACKUP_DESTINATION>/var_backup_$(date +%F)/
+   ```
+3. Verify the backup:
+
+   ```bash
+   du -sh <BACKUP_DESTINATION>/var_backup_$(date +%F)/
+   ```
+
+   Ensure it matches or exceeds the size shown by `du -sh /var`.
+
+> **Tip:** If you prefer, you can also perform this backup in the Live USB environment after mounting the root partition (see next section).
+
+---
+
+### 2. Boot Live USB and (Re-)Backup `/var` from Live Environment
 
 1. **Boot from Ubuntu Live USB (Try Ubuntu):**
 
-   * You cannot modify partitions in use by the running OS.
+   * You cannot modify partitions on a mounted root in use by the running OS, so use a Live session.
 
-2. **Open GParted:**
+2. **(Optional) Mount the Ubuntu Root and Backup `/var`:**
+   If you did not back up already, you can back up now from Live:
 
-   * Search and launch **GParted** from the Live Ubuntu desktop.
+   * Identify your root partition (e.g., via `lsblk` or `sudo fdisk -l`)—we’ll refer to it as `<ROOT_PARTITION>` (e.g., `/dev/sdXN`).
+   * Mount it:
+
+     ```bash
+     sudo mkdir /mnt/ubuntu_root
+     sudo mount /dev/<ROOT_PARTITION> /mnt/ubuntu_root
+     ```
+   * Mount or ensure access to your backup destination (`<BACKUP_DESTINATION>`), e.g., an external USB drive might auto-mount under `/media/ubuntu/...`.
+   * Run:
+
+     ```bash
+     sudo rsync -avh --progress /mnt/ubuntu_root/var/ <BACKUP_DESTINATION>/var_backup_$(date +%F)/
+     ```
+   * Verify sizes:
+
+     ```bash
+     du -sh /mnt/ubuntu_root/var
+     du -sh <BACKUP_DESTINATION>/var_backup_$(date +%F)/
+     ```
+   * Once done, unmount if desired:
+
+     ```bash
+     sudo umount /mnt/ubuntu_root
+     ```
+
+3. **Launch GParted:**
+
+   * From the Live Ubuntu desktop, open **GParted** (search “GParted” in the applications menu).
 
 ---
 
-### Phase 2: Partitioning with GParted (Partition for `/var`)
+### 3. Partitioning with GParted
 
-1. **Identify Your Existing Root Partition:**
+#### a. Identify and Shrink the Existing Root Partition
 
-   * Locate your main Ubuntu installation’s root partition (e.g., `/dev/nvme0n1p5`).
+1. In GParted, locate your Ubuntu root partition (we’ll call it `<ROOT_PARTITION>`).
 
-2. **Shrink the Existing Root Partition:**
+   * It might be labeled ext4 and you can confirm by matching size or mount points from `lsblk`.
+2. Right-click `<ROOT_PARTITION>` → **Resize/Move**.
+3. Decide how much space to free for `/var`.
 
-   * Right-click on `/dev/nvme0n1p5` and select **Resize/Move**.
-   * Adjust **New size (MiB)** to free up at least **30 GiB** for `/var` (e.g., enter `30720 MiB` for the new partition).
-   * Click **Resize/Move**, then click the green checkmark to **Apply All Operations**.
+   * Based on the earlier check (`du -sh /var`), free at least “current size + margin” (e.g., if `/var` used \~20 GiB, free ≥30 GiB).
+   * In the **Free Space Following (MiB)** field, enter the needed amount in MiB (e.g., `30720` for \~30 GiB), or adjust the “New size” accordingly.
+4. Click **Resize/Move**, then click the green checkmark (Apply All Operations). Wait for the operation to complete.
 
-3. **Create New Partition for `/var`:**
+#### b. Create New Partition for `/var`
 
-   * In the now-unallocated space:
+1. In the now-unallocated space (shown by GParted):
 
-     * Right-click on **unallocated** → **New**.
-     * Set **New size (MiB)** to `30720` (for 30 GiB).
-     * Set **File system** to `ext4`.
-     * Set **Label** to `VAR`.
-     * Click **Add**, then click **Apply All Operations** to format and create `/var`.
+   * Right-click on **unallocated** → **New**.
+   * For **New size (MiB)**, use a size at least as large as you planned (e.g., if you freed 30720 MiB, it should default to that). Adjust if needed.
+   * Set **File system** to `ext4`.
+   * (Optional) Set **Label** to something like `VAR_PART` or leave blank.
+   * Click **Add**.
+2. Click the green checkmark (Apply All Operations) to create and format the new partition.
+3. Note the device name assigned to the new partition (e.g., `/dev/sdXN`). We will refer to it as `<NEW_VAR_PARTITION>`.
 
-> **Note:** Adjust the size if you require more or less space for variable data.
+> **Note:** Use placeholders in your own commands: replace `<ROOT_PARTITION>` and `<NEW_VAR_PARTITION>` with the actual device paths you observe in GParted (e.g., `/dev/sda3`, `/dev/sda5`, or `/dev/nvme0n1p6`, etc).
 
 ---
 
-### Phase 3: Data Migration and `fstab` Configuration
+### 4. Data Migration and `fstab` Update
 
-1. **Identify the New `/var` Partition Device and UUID:**
+1. **Find the UUID of the New Partition:**
 
-   * After creation, GParted will list it (e.g., `/dev/nvme0n1p6`).
-   * Right-click → **Information** → copy the **UUID**.
+   * In GParted, right-click `<NEW_VAR_PARTITION>` → **Information** → copy the **UUID**.
+   * Alternatively in terminal:
+
+     ```bash
+     sudo blkid /dev/<NEW_VAR_PARTITION>
+     ```
+
+     and note the `UUID="..."`.
 
 2. **Mount Partitions in Live USB Terminal:**
 
    ```bash
-   sudo mkdir /mnt/ubuntu_root
-   sudo mount /dev/nvme0n1p5 /mnt/ubuntu_root         # Mount existing root
-   sudo mkdir /mnt/new_var
-   sudo mount /dev/nvme0n1p6 /mnt/new_var               # Mount new /var partition
+   sudo mkdir -p /mnt/ubuntu_root
+   sudo mount /dev/<ROOT_PARTITION> /mnt/ubuntu_root
+   sudo mkdir -p /mnt/new_var
+   sudo mount /dev/<NEW_VAR_PARTITION> /mnt/new_var
    ```
 
-3. **Copy `/var` Data:**
+3. **Copy Existing `/var` Data:**
 
    ```bash
    sudo rsync -avh --progress /mnt/ubuntu_root/var/ /mnt/new_var/
    ```
 
-   * **Verify** sizes:
+   * After copying, verify sizes:
 
      ```bash
      du -sh /mnt/ubuntu_root/var
      du -sh /mnt/new_var
      ```
+   * Ensure the copied data size matches or is very close.
 
-4. **Rename Original `/var`:**
+4. **Rename (Backup) Original `/var`:**
 
    ```bash
    sudo mv /mnt/ubuntu_root/var /mnt/ubuntu_root/var_old
    ```
 
-   * This acts as a backup. Once you confirm everything works, you may delete `/var_old`.
+   * This preserves the old data in case you need to revert. You can delete `var_old` after confirming the new `/var` works.
 
-5. **Update `fstab` of Installed System:**
+5. **Edit `fstab` in the Installed System:**
 
    ```bash
    sudo nano /mnt/ubuntu_root/etc/fstab
    ```
 
-   * Add an entry (replace `<UUID>` with the actual UUID or replace `UUID=<UUID>` with device name `/dev/nvme0n1pX`):
+   * Add a new line for the `/var` partition. You can choose either:
 
-     ```
-     UUID=<UUID>    /var    ext4    defaults,nosuid,nodev    0   2
-     ```
-   * Save (Ctrl+O, Enter) and exit (Ctrl+X).
+     * **UUID entry** (more robust if device names change):
+
+       ```
+       UUID=<UUID_OF_NEW_VAR>    /var    ext4    defaults,nosuid,nodev    0   2
+       ```
+     * **Direct device path** (simpler but may break if disk order/naming changes):
+
+       ```
+       /dev/<NEW_VAR_PARTITION>    /var    ext4    defaults,nosuid,nodev    0   2
+       ```
+   * **Reasoning**:
+
+     * **UUID**: Remains consistent even if device enumeration or disk ordering changes (e.g., adding/removing drives). Preferred for stability.
+     * **Device path**: Easier to type in the short term, but if the kernel assigns different names later (e.g., `/dev/sda` becomes `/dev/sdb`), the system may fail to mount `/var`.
+   * Save and exit (Ctrl+O, Enter; Ctrl+X).
 
 6. **Unmount and Reboot:**
 
@@ -108,21 +188,37 @@ Verify the backup completed successfully before moving on.
 
 ---
 
-### Phase 4: Verification
+### 5. Post-Reboot Verification
 
-1. After booting normally, in a terminal:
+1. After booting into your installed Ubuntu:
 
    ```bash
    df -h | grep "/var"
    ls -la /var
    ```
 
-   * Confirm `/var` is a separate mount with expected usage.
-
-2. If everything looks correct, remove the backup folder:
+   * Confirm that `/var` is listed as its own mount point and usage reflects what was copied.
+2. If all is working correctly and you no longer need the backup copy:
 
    ```bash
    sudo rm -rf /var_old
    ```
 
-Congratulations! The `/var` directory is now on its own partition.
+   * Only do this after you are confident services depending on `/var` run normally.
+
+---
+
+### Summary of Placeholder Conventions
+
+* `<ROOT_PARTITION>`: the existing root filesystem partition on your Ubuntu installation (e.g., `/dev/sda3`, `/dev/nvme0n1p5`, etc.). Identify via `lsblk`, GParted, or `sudo fdisk -l`.
+* `<NEW_VAR_PARTITION>`: the new partition you create for `/var` in the freed space (e.g., `/dev/sda5`, `/dev/nvme0n1p6`, etc.).
+* `<UUID_OF_NEW_VAR>`: the filesystem UUID for `<NEW_VAR_PARTITION>`, obtained via GParted or `sudo blkid`.
+* `<BACKUP_DESTINATION>`: path (local mount point or network location) where you store your backup (e.g., `/media/ubuntu/MyBackupDrive` or `user@server:/backups/ubuntu_var`).
+
+> **Tips:**
+>
+> * Always double-check device names before running destructive operations.
+> * Ensure you have a reliable backup before modifying partitions.
+> * Plan the new partition size based on current `/var` usage plus growth expectations.
+> * If you ever need to revert during testing, you can restore `/var_old` back to `/var` by reversing the `mv` and fstab entry.
+
