fix: improve process on 28507 documentation

--- a/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28507.md
+++ b/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28507.md
@@ -1,103 +1,170 @@
-## Create `/var/tmp` Partition
 
-### Preliminary Backup Step
+## Create a Separate `/var/tmp` Partition
 
-Before proceeding, ensure you have a recent backup of critical data:
+### 1. Preliminary Checks and Backup
 
-```bash
-sudo rsync -avh --progress /var/tmp /path/to/backup/vartmp_backup_
-```
+#### a. Check Current `/var/tmp` Size on the Installed System
+Before creating a new partition, see how much data is in `/var/tmp` and decide on an appropriate size (with some headroom).
 
-Verify the backup completed successfully before moving on.
+1. Boot normally into your installed Ubuntu system.
+2. Open a terminal and run:
+   ```bash
+   sudo du -sh /var/tmp
+   sudo df -h /var/tmp
+   ```
 
-### Phase 1: Prepare the Environment (Live USB)
+* `du -sh /var/tmp` shows total size of existing data.
+* `df -h /var/tmp` shows filesystem usage and free space.
+
+3. Based on these outputs, choose a target size for the new `/var/tmp` partition (e.g., if `/var/tmp` uses 2 GiB, you might allocate 5 GiB or more).
+
+#### b. Backup Existing `/var/tmp` Data (Optional: from Installed System or Live USB)
+
+It’s wise to back up `/var/tmp` before changes. You can back up now or later in the Live USB environment.
+
+* If backing up now (while booted normally), ensure `<BACKUP_DESTINATION>` is accessible:
+
+  ```bash
+  sudo rsync -avh --progress /var/tmp/ <BACKUP_DESTINATION>/vartmp_backup_$(date +%F)/
+  du -sh <BACKUP_DESTINATION>/vartmp_backup_$(date +%F)/
+  ```
+* Or wait until Live USB: after mounting the installed root (see next section), run:
+
+  ```bash
+  sudo rsync -avh --progress /mnt/ubuntu_root/var/tmp/ <BACKUP_DESTINATION>/vartmp_backup_$(date +%F)/
+  du -sh /mnt/ubuntu_root/var/tmp
+  du -sh <BACKUP_DESTINATION>/vartmp_backup_$(date +%F)/
+  ```
+
+> **Tip:** Replace `<BACKUP_DESTINATION>` with your actual backup path (e.g., `/media/ubuntu/BackupDrive` or `user@server:/path/`).
+
+---
+
+### 2. Boot Live USB and (Re-)Backup `/var/tmp` from Live Environment
 
 1. **Boot from Ubuntu Live USB (Try Ubuntu):**
 
-   * You cannot modify partitions in use by the running OS.
+   * Necessary because you can't modify mounted partitions of the running OS.
+2. **(Optional) Mount the Ubuntu Root and Backup `/var/tmp`:**
 
-2. **Open GParted:**
+   * Identify your root partition (e.g., via `lsblk` or `sudo fdisk -l`), refer to it as `<ROOT_PARTITION>`.
+   * Mount it:
 
-   * Launch **GParted** from the Live Ubuntu desktop.
+     ```bash
+     sudo mkdir -p /mnt/ubuntu_root
+     sudo mount /dev/<ROOT_PARTITION> /mnt/ubuntu_root
+     ```
+   * Ensure `<BACKUP_DESTINATION>` is available/mounted.
+   * Back up:
 
----
+     ```bash
+     sudo rsync -avh --progress /mnt/ubuntu_root/var/tmp/ <BACKUP_DESTINATION>/vartmp_backup_$(date +%F)/
+     du -sh /mnt/ubuntu_root/var/tmp
+     du -sh <BACKUP_DESTINATION>/vartmp_backup_$(date +%F)/
+     ```
+   * Unmount if desired:
 
-### Phase 2: Partitioning with GParted (Partition for `/var/tmp`)
+     ```bash
+     sudo umount /mnt/ubuntu_root
+     ```
+3. **Launch GParted:**
 
-1. **Identify Your Existing Root Partition:**
-
-   * Locate your main Ubuntu root (e.g., `/dev/nvme0n1p5`).
-
-2. **Shrink the Root Partition (if not already done):**
-
-   * Right-click on `/dev/nvme0n1p5` → **Resize/Move**.
-   * Free up at least **5 GiB** (e.g., enter `5120 MiB` for the new partition).
-   * Click **Resize/Move** → **Apply All Operations**.
-
-3. **Create New Partition for `/var/tmp`:**
-
-   * In the freed space:
-
-     * Right-click **unallocated** → **New**.
-     * Set **New size (MiB)** to `5120` for 5 GiB.
-     * Set **File system** to `ext4`.
-     * Set **Label** to `VARTMP`.
-     * Click **Add**, then **Apply All Operations**.
-
-> **Note:** You should apply the shrink before creating this partition if the root hasn’t already been resized for `/var` and `/home`.
+   * From the Live desktop, open **GParted**.
 
 ---
 
-### Phase 3: Data Migration and `fstab` Configuration
+### 3. Partitioning with GParted
 
-1. **Identify the New `/var/tmp` Device and UUID:**
+#### a. Identify and Shrink the Existing Root Partition (if needed)
 
-   * After creation, GParted will label it (e.g., `/dev/nvme0n1p7`).
-   * Right-click → **Information** → copy the **UUID**.
+1. In GParted, locate your Ubuntu root partition (`<ROOT_PARTITION>`).
+2. If you haven’t already freed space for `/var/tmp`, right-click `<ROOT_PARTITION>` → **Resize/Move**.
+3. Free at least the size you planned (e.g., 5120 MiB for \~5 GiB). In **Free Space Following (MiB)** enter that value.
+4. Click **Resize/Move**, then Apply All Operations.
+
+#### b. Create New Partition for `/var/tmp`
+
+1. In the unallocated space:
+
+   * Right-click **unallocated** → **New**.
+   * Set **New size (MiB)** to your chosen size (e.g., `5120`).
+   * Set **File system** to `ext4`.
+   * (Optional) Set **Label** to `VARTMP_PART` or leave blank.
+   * Click **Add**.
+2. Click the green checkmark (Apply All Operations) to create and format.
+3. Note the device name assigned (e.g., `/dev/sdXN`); refer to it as `<NEW_VARTMP_PARTITION>`.
+
+> **Note:** Use placeholders: replace `<ROOT_PARTITION>` and `<NEW_VARTMP_PARTITION>` with actual device paths you see (e.g., `/dev/sda3`, `/dev/sda6`).
+
+---
+
+### 4. Data Migration and `fstab` Update
+
+1. **Find the UUID of the New Partition:**
+
+   * In GParted, right-click `<NEW_VARTMP_PARTITION>` → **Information** → copy **UUID**.
+   * Or in terminal:
+
+     ```bash
+     sudo blkid /dev/<NEW_VARTMP_PARTITION>
+     ```
+
+     and note `UUID="..."`.
 
 2. **Mount Partitions in Live USB Terminal:**
 
    ```bash
-   sudo mkdir /mnt/ubuntu_root
-   sudo mount /dev/nvme0n1p5 /mnt/ubuntu_root         # Mount existing root
-   sudo mkdir /mnt/new_vartmp
-   sudo mount /dev/nvme0n1p7 /mnt/new_vartmp           # Mount new /var/tmp
+   sudo mkdir -p /mnt/ubuntu_root
+   sudo mount /dev/<ROOT_PARTITION> /mnt/ubuntu_root
+   sudo mkdir -p /mnt/new_vartmp
+   sudo mount /dev/<NEW_VARTMP_PARTITION> /mnt/new_vartmp
    ```
 
-3. **Copy `/var/tmp` Data:**
+3. **Copy Existing `/var/tmp` Data:**
 
    ```bash
    sudo rsync -avh --progress /mnt/ubuntu_root/var/tmp/ /mnt/new_vartmp/
    ```
 
-   * **Verify** sizes:
+   * Verify sizes:
 
      ```bash
      du -sh /mnt/ubuntu_root/var/tmp
      du -sh /mnt/new_vartmp
      ```
+   * Ensure data matches or is very close.
 
-4. **Rename Original `/var/tmp`:**
+4. **Rename (Backup) Original `/var/tmp`:**
 
    ```bash
    sudo mv /mnt/ubuntu_root/var/tmp /mnt/ubuntu_root/var/tmp_old
    ```
 
-   * Acts as a backup. After confirming success, you may remove `/var/tmp_old`.
+   * Keeps a fallback. Delete `var/tmp_old` after confirming success.
 
-5. **Update `fstab` of Installed System:**
+5. **Edit `fstab` in the Installed System:**
 
    ```bash
    sudo nano /mnt/ubuntu_root/etc/fstab
    ```
 
-   * Add an entry (replace `<UUID>` with the actual UUID or replace `UUID=<UUID>` with device name `/dev/nvme0n1pX`):
+   * Add a line for `/var/tmp`. You can choose:
 
+     * **UUID entry** (robust if device names change):
 
-     ```
-     UUID=<UUID>    /var/tmp    ext4    defaults,nosuid,nodev,noexec    0   2
-     ```
-   * Save (Ctrl+O) and exit (Ctrl+X).
+       ```
+       UUID=<UUID_OF_NEW_VARTMP>    /var/tmp    ext4    defaults,nosuid,nodev,noexec    0   2
+       ```
+     * **Direct device path** (simpler but may break if naming shifts):
+
+       ```
+       /dev/<NEW_VARTMP_PARTITION>    /var/tmp    ext4    defaults,nosuid,nodev,noexec    0   2
+       ```
+   * **Reasoning**:
+
+     * **UUID**: Stable across reboots, unaffected by disk order changes. Preferred for reliability.
+     * **Device path**: Easier to type initially, but if disk enumeration changes, mount could fail.
+   * Save and exit (Ctrl+O, Enter; Ctrl+X).
 
 6. **Unmount and Reboot:**
 
@@ -109,21 +176,37 @@ Verify the backup completed successfully before moving on.
 
 ---
 
-### Phase 4: Verification
+### 5. Post-Reboot Verification
 
-1. After booting normally:
+1. After booting into your installed Ubuntu:
 
    ```bash
    df -h | grep "/var/tmp"
    ls -la /var/tmp
    ```
 
-   * Ensure `/var/tmp` is mounted separately and contains your data.
-
-2. If correct, remove the backup folder:
+   * Confirm `/var/tmp` is a separate mount with expected contents.
+2. If all works, remove the backup copy:
 
    ```bash
    sudo rm -rf /var/tmp_old
    ```
 
-Your `/var/tmp` directory is now on its own partition.
+   * Only after verifying services and temporary files behave normally.
+
+---
+
+### Summary of Placeholder Conventions
+
+* `<ROOT_PARTITION>`: your existing root filesystem partition (e.g., `/dev/sda3`, `/dev/nvme0n1p5`).
+* `<NEW_VARTMP_PARTITION>`: the newly created partition for `/var/tmp` (e.g., `/dev/sda6`, `/dev/nvme0n1p7`).
+* `<UUID_OF_NEW_VARTMP>`: filesystem UUID of `<NEW_VARTMP_PARTITION>`, from GParted or `blkid`.
+* `<BACKUP_DESTINATION>`: path or mount point where backups are stored (e.g., `/media/ubuntu/BackupDrive` or `user@server:/backups`).
+
+> **Tips:**
+>
+> * Double-check device identifiers before destructive operations.
+> * Ensure reliable backup before partition changes.
+> * Choose partition size based on current `/var/tmp` usage plus growth expectations.
+> * To revert during testing, restore `/var/tmp_old` back to `/var/tmp` and remove the fstab line.
+
