fix: improve process on 28511, 28515 and 28519 documentation

--- a/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28515.md
+++ b/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28515.md
@@ -1,102 +1,169 @@
-## Create `/var/log/audit` Partition
+## Create a Separate `/var/log/audit` Partition
 
-### Preliminary Backup Step
+### 1. Preliminary Checks and Backup
 
-Before proceeding, ensure you have a recent backup of critical data:
+#### a. Check Current `/var/log/audit` Size on the Installed System
+Before creating a new partition, check how much data is in `/var/log/audit` and choose an appropriate size (with headroom for growth).
 
-```bash
-sudo rsync -avh --progress /var/log/audit /path/to/backup/varlogaudit_backup_
-```
+1. Boot normally into your installed Ubuntu system.
+2. Open a terminal and run:
+   ```bash
+   sudo du -sh /var/log/audit
+   sudo df -h /var/log/audit
+   ```
 
-Verify the backup completed successfully before moving on.
+* `du -sh /var/log/audit` shows total size of existing audit logs.
+* `df -h /var/log/audit` shows filesystem usage and free space.
 
-### Phase 1: Prepare the Environment (Live USB)
+3. Based on these outputs, decide on a target size for the new `/var/log/audit` partition (e.g., if audit logs use \~3 GiB, you might allocate 5 GiB or more).
+
+#### b. Backup Existing `/var/log/audit` Data (Optional: from Installed System or Live USB)
+
+Back up `/var/log/audit` before making changes. You can back up now or later from the Live USB.
+
+* If backing up now (while booted normally), ensure `<BACKUP_DESTINATION>` is accessible:
+
+  ```bash
+  sudo rsync -avh --progress /var/log/audit/ <BACKUP_DESTINATION>/varlogaudit_backup_$(date +%F)/
+  du -sh <BACKUP_DESTINATION>/varlogaudit_backup_$(date +%F)/
+  ```
+* Or in Live USB after mounting your root (see next section), run:
+
+  ```bash
+  sudo rsync -avh --progress /mnt/ubuntu_root/var/log/audit/ <BACKUP_DESTINATION>/varlogaudit_backup_$(date +%F)/
+  du -sh /mnt/ubuntu_root/var/log/audit
+  du -sh <BACKUP_DESTINATION>/varlogaudit_backup_$(date +%F)/
+  ```
+
+> **Tip:** Replace `<BACKUP_DESTINATION>` with your real backup path (e.g., `/media/ubuntu/BackupDrive` or `user@server:/backups`).
+
+---
+
+### 2. Boot Live USB and (Re-)Backup `/var/log/audit` from Live Environment
 
 1. **Boot from Ubuntu Live USB (Try Ubuntu):**
 
-   * You cannot modify partitions that are in use by the running OS.
+   * Required because you cannot modify partitions mounted by the running OS.
+2. **(Optional) Mount the Ubuntu Root and Backup `/var/log/audit`:**
 
-2. **Open GParted:**
+   * Identify your root partition via `lsblk` or `sudo fdisk -l`; call it `<ROOT_PARTITION>`.
+   * Mount it:
 
-   * Launch **GParted** from the Live Ubuntu desktop.
+     ```bash
+     sudo mkdir -p /mnt/ubuntu_root
+     sudo mount /dev/<ROOT_PARTITION> /mnt/ubuntu_root
+     ```
+   * Ensure `<BACKUP_DESTINATION>` is available/mounted.
+   * Back up:
 
----
+     ```bash
+     sudo rsync -avh --progress /mnt/ubuntu_root/var/log/audit/ <BACKUP_DESTINATION>/varlogaudit_backup_$(date +%F)/
+     du -sh /mnt/ubuntu_root/var/log/audit
+     du -sh <BACKUP_DESTINATION>/varlogaudit_backup_$(date +%F)/
+     ```
+   * Unmount if desired:
 
-### Phase 2: Partitioning with GParted (Partition for `/var/log/audit`)
+     ```bash
+     sudo umount /mnt/ubuntu_root
+     ```
+3. **Launch GParted:**
 
-1. **Identify Your Existing Root Partition:**
-
-   * Locate your Ubuntu root partition (e.g., `/dev/nvme0n1p5`).
-
-2. **Shrink the Root Partition (if not already done):**
-
-   * Right-click `/dev/nvme0n1p5` → **Resize/Move**.
-   * Free up at least **5 GiB** for `/var/log/audit` (e.g., `5120 MiB`).
-   * Click **Resize/Move**, then **Apply All Operations**.
-
-3. **Create New Partition for `/var/log/audit`:**
-
-   * In the freed space:
-
-     * Right-click **unallocated** → **New**.
-     * Set **New size (MiB)** to `5120` (for 5 GiB).
-     * Set **File system** to `ext4`.
-     * Set **Label** to `VARLOGAUDIT`.
-     * Click **Add**, then **Apply All Operations**.
-
-> **CIS Recommendation:** Mount options `nodev`, `nosuid`, `noexec` are strongly recommended for audit logs.
+   * From the Live desktop, open **GParted**.
 
 ---
 
-### Phase 3: Data Migration and `fstab` Configuration
+### 3. Partitioning with GParted
 
-1. **Identify the New `/var/log/audit` Device and UUID:**
+#### a. Identify and Shrink the Existing Root Partition (if needed)
 
-   * After creation, GParted will label it (e.g., `/dev/nvme0n1p9`).
-   * Right-click → **Information** → copy the **UUID**.
+1. In GParted, locate your Ubuntu root partition (`<ROOT_PARTITION>`).
+2. If you haven’t already freed space for `/var/log/audit`, right-click `<ROOT_PARTITION>` → **Resize/Move**.
+3. Free at least the size you planned (e.g., 5120 MiB for \~5 GiB). Enter that in **Free Space Following (MiB)**.
+4. Click **Resize/Move**, then Apply All Operations.
+
+#### b. Create New Partition for `/var/log/audit`
+
+1. In the unallocated space:
+
+   * Right-click **unallocated** → **New**.
+   * Set **New size (MiB)** to your chosen size (e.g., `5120`).
+   * Set **File system** to `ext4`.
+   * (Optional) Set **Label** to `VARLOGAUDIT_PART` or leave blank.
+   * Click **Add**.
+2. Click the green checkmark (Apply All Operations) to create and format.
+3. Note the device name assigned (e.g., `/dev/sdXN` or `/dev/nvme0n1pX`); refer to it as `<NEW_VARLOGAUDIT_PARTITION>`.
+
+> **Note:** Use placeholders: replace `<ROOT_PARTITION>` and `<NEW_VARLOGAUDIT_PARTITION>` with actual device paths you see.
+
+---
+
+### 4. Data Migration and `fstab` Update
+
+1. **Find the UUID of the New Partition:**
+
+   * In GParted, right-click `<NEW_VARLOGAUDIT_PARTITION>` → **Information** → copy **UUID**.
+   * Or in terminal:
+
+     ```bash
+     sudo blkid /dev/<NEW_VARLOGAUDIT_PARTITION>
+     ```
+
+     and note `UUID="..."`.
 
 2. **Mount Partitions in Live USB Terminal:**
 
    ```bash
-   sudo mkdir /mnt/ubuntu_root
-   sudo mount /dev/nvme0n1p5 /mnt/ubuntu_root         # Mount existing root
-   sudo mkdir /mnt/new_varlogaudit
-   sudo mount /dev/nvme0n1p9 /mnt/new_varlogaudit       # Mount new /var/log/audit
+   sudo mkdir -p /mnt/ubuntu_root
+   sudo mount /dev/<ROOT_PARTITION> /mnt/ubuntu_root
+   sudo mkdir -p /mnt/new_varlogaudit
+   sudo mount /dev/<NEW_VARLOGAUDIT_PARTITION> /mnt/new_varlogaudit
    ```
 
-3. **Copy `/var/log/audit` Data:**
+3. **Copy Existing `/var/log/audit` Data:**
 
    ```bash
    sudo rsync -avh --progress /mnt/ubuntu_root/var/log/audit/ /mnt/new_varlogaudit/
    ```
 
-   * **Verify** sizes:
+   * Verify sizes:
 
      ```bash
      du -sh /mnt/ubuntu_root/var/log/audit
      du -sh /mnt/new_varlogaudit
      ```
+   * Ensure data matches or is very close.
 
-4. **Rename Original `/var/log/audit`:**
+4. **Rename (Backup) Original `/var/log/audit`:**
 
    ```bash
    sudo mv /mnt/ubuntu_root/var/log/audit /mnt/ubuntu_root/var/log/audit_old
    ```
 
-   * Acts as a backup. After verifying, remove `/var/log/audit_old`.
+   * Keeps a fallback. Delete `audit_old` after confirming success.
 
-5. **Update `fstab` of Installed System:**
+5. **Edit `fstab` in the Installed System:**
 
    ```bash
    sudo nano /mnt/ubuntu_root/etc/fstab
    ```
 
-   * Add an entry (replace `<UUID>` with the actual UUID or replace `UUID=<UUID>` with device name `/dev/nvme0n1pX`):
+   * Add a line for `/var/log/audit`. You can choose:
 
-     ```
-     UUID=<UUID>    /var/log/audit    ext4    defaults,nosuid,nodev,noexec    0   2
-     ```
-   * Save (Ctrl+O) and exit (Ctrl+X).
+     * **UUID entry** (robust if device names change):
+
+       ```
+       UUID=<UUID_OF_NEW_VARLOGAUDIT>    /var/log/audit    ext4    defaults,nosuid,nodev,noexec    0   2
+       ```
+     * **Direct device path** (simpler but may break if naming shifts):
+
+       ```
+       /dev/<NEW_VARLOGAUDIT_PARTITION>    /var/log/audit    ext4    defaults,nosuid,nodev,noexec    0   2
+       ```
+   * **Reasoning**:
+
+     * **UUID**: Stable across reboots and disk-order changes; preferred for reliability.
+     * **Device path**: Easier to type initially, but if disk enumeration changes, mount could fail.
+   * Save and exit (Ctrl+O, Enter; Ctrl+X).
 
 6. **Unmount and Reboot:**
 
@@ -108,21 +175,37 @@ Verify the backup completed successfully before moving on.
 
 ---
 
-### Phase 4: Verification
+### 5. Post-Reboot Verification
 
-1. After normal boot:
+1. After booting into your installed Ubuntu:
 
    ```bash
    df -h | grep "/var/log/audit"
    ls -la /var/log/audit
    ```
 
-   * Ensure `/var/log/audit` is mounted separately and contains audit logs.
-
-2. If successful, remove the backup:
+   * Confirm `/var/log/audit` is a separate mount with expected audit logs.
+2. If all works, remove the backup copy:
 
    ```bash
    sudo rm -rf /var/log/audit_old
    ```
 
-Your `/var/log/audit` directory is now on its own partition.
+   * Only after verifying audit services log correctly to the new location.
+
+---
+
+### Summary of Placeholder Conventions
+
+* `<ROOT_PARTITION>`: your existing root filesystem partition (e.g., `/dev/sda3`, `/dev/nvme0n1p5`).
+* `<NEW_VARLOGAUDIT_PARTITION>`: the newly created partition for `/var/log/audit` (e.g., `/dev/sda8`, `/dev/nvme0n1p9`).
+* `<UUID_OF_NEW_VARLOGAUDIT>`: filesystem UUID of `<NEW_VARLOGAUDIT_PARTITION>`, obtained via GParted or `blkid`.
+* `<BACKUP_DESTINATION>`: path or mount point for backups (e.g., `/media/ubuntu/BackupDrive` or `user@server:/backups`).
+
+> **Tips:**
+>
+> * Double-check device identifiers before destructive operations.
+> * Ensure a reliable backup before making partition changes.
+> * Choose partition size based on current `/var/log/audit` usage plus expected growth.
+> * To revert during testing, restore `/var/log/audit_old` back to `/var/log/audit` and remove or comment out the fstab entry.
+
