--- a/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28519.md
+++ b/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28519.md
@@ -1,102 +1,169 @@
-## Create `/home` Partition
+## Create a Separate `/home` Partition
 
-### Preliminary Backup Step
+### 1. Preliminary Checks and Backup
 
-Before proceeding, ensure you have a recent backup of critical data:
+#### a. Check Current `/home` Size on the Installed System
+Before creating a new `/home` partition, check how much data is in `/home` and choose an appropriate size.
 
-```bash
-sudo rsync -avh --progress /home/ /path/to/backup/home_backup_
-```
+1. Boot normally into your installed Ubuntu system.
+2. Open a terminal and run:
+   ```bash
+   sudo du -sh /home
+   sudo df -h /home
+   ```
 
-Verify the backup completed successfully before moving on.
+* `du -sh /home` shows total size of existing user data.
+* `df -h /home` shows filesystem usage and free space.
 
-### Phase 1: Prepare the Environment (Live USB)
+3. Based on these outputs, decide how much space to allocate for `/home` (e.g., if current data is 100 GiB, you might allocate 250 GiB or more depending on future needs).
+
+#### b. Backup Existing `/home` Data
+
+Back up `/home` before making partition changes. You can back up now or later in Live USB.
+
+* If backing up now (while booted normally), ensure `<BACKUP_DESTINATION>` is accessible:
+
+  ```bash
+  sudo rsync -avh --progress /home/ <BACKUP_DESTINATION>/home_backup_$(date +%F)/
+  du -sh <BACKUP_DESTINATION>/home_backup_$(date +%F)/
+  ```
+* Or in Live USB after mounting root (see next section):
+
+  ```bash
+  sudo rsync -avh --progress /mnt/ubuntu_root/home/ <BACKUP_DESTINATION>/home_backup_$(date +%F)/
+  du -sh /mnt/ubuntu_root/home
+  du -sh <BACKUP_DESTINATION>/home_backup_$(date +%F)/
+  ```
+
+> **Tip:** Replace `<BACKUP_DESTINATION>` with your actual backup path (e.g., `/media/ubuntu/BackupDrive` or `user@server:/backups/home`).
+
+---
+
+### 2. Boot Live USB and (Re-)Backup `/home` from Live Environment
 
 1. **Boot from Ubuntu Live USB (Try Ubuntu):**
 
-   * You cannot modify partitions that are in use by the running OS.
+   * Necessary because you cannot modify mounted root partitions.
+2. **(Optional) Mount the Ubuntu Root and Backup `/home`:**
 
-2. **Open GParted:**
+   * Identify your root partition via `lsblk` or `sudo fdisk -l`; call it `<ROOT_PARTITION>`.
+   * Mount it:
 
-   * Launch **GParted** from the Live Ubuntu desktop.
+     ```bash
+     sudo mkdir -p /mnt/ubuntu_root
+     sudo mount /dev/<ROOT_PARTITION> /mnt/ubuntu_root
+     ```
+   * Ensure `<BACKUP_DESTINATION>` is available/mounted.
+   * Back up:
 
----
+     ```bash
+     sudo rsync -avh --progress /mnt/ubuntu_root/home/ <BACKUP_DESTINATION>/home_backup_$(date +%F)/
+     du -sh /mnt/ubuntu_root/home
+     du -sh <BACKUP_DESTINATION>/home_backup_$(date +%F)/
+     ```
+   * Unmount if desired:
 
-### Phase 2: Partitioning with GParted (Partition for `/home`)
+     ```bash
+     sudo umount /mnt/ubuntu_root
+     ```
+3. **Launch GParted:**
 
-1. **Identify Your Existing Root Partition:**
-
-   * Locate your Ubuntu root partition (e.g., `/dev/nvme0n1p5`).
-
-2. **Shrink the Root Partition (if not already done):**
-
-   * Right-click `/dev/nvme0n1p5` → **Resize/Move**.
-   * Free up the desired space for `/home` (e.g., remaining space or \~250 GiB).
-   * Click **Resize/Move**, then **Apply All Operations**.
-
-3. **Create New Partition for **\`\`**:**
-
-   * In the unallocated space:
-
-     * Right-click **unallocated** → **New**.
-     * Use **Maximum size (MiB)** (e.g., \~250 GB).
-     * Set **File system** to `ext4`.
-     * Set **Label** to `HOME`.
-     * Click **Add**, then **Apply All Operations**.
-
-> **Tip:** Allocate enough space for user data and future growth.
+   * From the Live desktop, open **GParted**.
 
 ---
 
-### Phase 3: Data Migration and `fstab` Configuration
+### 3. Partitioning with GParted
 
-1. **Identify the New **\`\`** Device and UUID:**
+#### a. Identify and Shrink the Existing Root Partition (if needed)
 
-   * After creation, GParted will label it (e.g., `/dev/nvme0n1p10`).
-   * Right-click → **Information** → copy the **UUID**.
+1. In GParted, locate your Ubuntu root partition (`<ROOT_PARTITION>`).
+2. If you need to free space for `/home`, right-click `<ROOT_PARTITION>` → **Resize/Move**.
+3. Free the desired amount (e.g., remaining free space or \~250 GiB). In **Free Space Following (MiB)**, enter the size in MiB (e.g., `256000` for \~250 GiB).
+4. Click **Resize/Move**, then Apply All Operations.
+
+#### b. Create New Partition for `/home`
+
+1. In the unallocated space:
+
+   * Right-click **unallocated** → **New**.
+   * Set **New size (MiB)** to the chosen size (e.g., maximum available or specific value).
+   * Set **File system** to `ext4`.
+   * (Optional) Set **Label** to `HOME_PART` or leave blank.
+   * Click **Add**.
+2. Click the green checkmark (Apply All Operations) to create and format.
+3. Note the device name assigned (e.g., `/dev/sdXN` or `/dev/nvme0n1pY`); refer to it as `<NEW_HOME_PARTITION>`.
+
+> **Note:** Use placeholders: replace `<ROOT_PARTITION>` and `<NEW_HOME_PARTITION>` with actual device paths you observe.
+
+---
+
+### 4. Data Migration and `fstab` Update
+
+1. **Find the UUID of the New Partition:**
+
+   * In GParted, right-click `<NEW_HOME_PARTITION>` → **Information** → copy **UUID**.
+   * Or in terminal:
+
+     ```bash
+     sudo blkid /dev/<NEW_HOME_PARTITION>
+     ```
+
+     and note `UUID="..."`.
 
 2. **Mount Partitions in Live USB Terminal:**
 
    ```bash
-   sudo mkdir /mnt/ubuntu_root
-   sudo mount /dev/nvme0n1p5 /mnt/ubuntu_root         # Mount existing root
-   sudo mkdir /mnt/new_home
-   sudo mount /dev/nvme0n1p10 /mnt/new_home             # Mount new /home partition
+   sudo mkdir -p /mnt/ubuntu_root
+   sudo mount /dev/<ROOT_PARTITION> /mnt/ubuntu_root
+   sudo mkdir -p /mnt/new_home
+   sudo mount /dev/<NEW_HOME_PARTITION> /mnt/new_home
    ```
 
-3. **Copy **\`\`** Data:**
+3. **Copy Existing `/home` Data:**
 
    ```bash
    sudo rsync -avh --progress /mnt/ubuntu_root/home/ /mnt/new_home/
    ```
 
-   * **Verify** sizes:
+   * Verify sizes:
 
      ```bash
      du -sh /mnt/ubuntu_root/home
      du -sh /mnt/new_home
      ```
+   * Ensure data matches or is very close.
 
-4. **Rename Original **\`\`**:**
+4. **Rename (Backup) Original `/home`:**
 
    ```bash
    sudo mv /mnt/ubuntu_root/home /mnt/ubuntu_root/home_old
    ```
 
-   * Acts as a backup. After verifying, remove `/home_old`.
+   * Keeps a fallback. Delete `home_old` after confirming success.
 
-5. **Update **\`\`** of Installed System:**
+5. **Edit `fstab` in the Installed System:**
 
    ```bash
    sudo nano /mnt/ubuntu_root/etc/fstab
    ```
 
-   * Add an entry (replace `<UUID>` with the actual UUID or replace `UUID=<UUID>` with device name `/dev/nvme0n1pX`):
+   * Add a line for `/home`. You can choose:
 
-     ```
-     UUID=<UUID>    /home    ext4    defaults,nosuid,nodev    0   2
-     ```
-   * Save (Ctrl+O) and exit (Ctrl+X).
+     * **UUID entry** (robust if device names change):
+
+       ```
+       UUID=<UUID_OF_NEW_HOME>    /home    ext4    defaults,nosuid,nodev    0   2
+       ```
+     * **Direct device path** (simpler but may break if naming shifts):
+
+       ```
+       /dev/<NEW_HOME_PARTITION>    /home    ext4    defaults,nosuid,nodev    0   2
+       ```
+   * **Reasoning**:
+
+     * **UUID**: Stable across reboots and unaffected by disk-order changes; preferred for reliability.
+     * **Device path**: Easier to type initially, but if disk enumeration changes, mount could fail.
+   * Save and exit (Ctrl+O, Enter; Ctrl+X).
 
 6. **Unmount and Reboot:**
 
@@ -108,21 +175,36 @@ Verify the backup completed successfully before moving on.
 
 ---
 
-### Phase 4: Verification
+### 5. Post-Reboot Verification
 
-1. After rebooting:
+1. After booting into your installed Ubuntu:
 
    ```bash
    df -h | grep "/home"
    ls -la /home
    ```
 
-   * Ensure `/home` is mounted separately and your user data is present.
-
-2. If successful, remove the backup:
+   * Confirm `/home` is a separate mount with expected user data.
+2. If all works, remove the backup copy:
 
    ```bash
    sudo rm -rf /home_old
    ```
 
-Your `/home` directory is now on its own partition.
+   * Only after verifying user data and configurations operate normally.
+
+---
+
+### Summary of Placeholder Conventions
+
+* `<ROOT_PARTITION>`: your existing root filesystem partition (e.g., `/dev/sda3`, `/dev/nvme0n1p5`).
+* `<NEW_HOME_PARTITION>`: the newly created partition for `/home` (e.g., `/dev/sda6`, `/dev/nvme0n1p10`).
+* `<UUID_OF_NEW_HOME>`: filesystem UUID of `<NEW_HOME_PARTITION>`, from GParted or `blkid`.
+* `<BACKUP_DESTINATION>`: path or mount point for backups (e.g., `/media/ubuntu/BackupDrive` or `user@server:/backups/home`).
+
+> **Tips:**
+>
+> * Double-check device identifiers before destructive operations.
+> * Ensure a reliable backup before modifying partitions.
+> * Choose partition size based on current `/home` usage plus anticipated growth.
+> * To revert during testing, restore `/home_old` back to `/home` and remove or comment out the fstab entry.
