--- a/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28511.md
+++ b/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28511.md
@@ -1,103 +1,169 @@
-## Create `/var/log` Partition
+## Create a Separate `/var/log` Partition
 
-### Preliminary Backup Step
+### 1. Preliminary Checks and Backup
 
-Before proceeding, ensure you have a recent backup of critical data:
+#### a. Check Current `/var/log` Size on the Installed System
+Before creating a new partition, check how much data is in `/var/log` and decide on an appropriate size (with some headroom).
 
-```bash
-sudo rsync -avh --progress /var/log /path/to/backup/varlog_backup_
-```
+1. Boot normally into your installed Ubuntu system.
+2. Open a terminal and run:
+   ```bash
+   sudo du -sh /var/log
+   sudo df -h /var/log
+   ```
 
-Verify the backup completed successfully before moving on.
+* `du -sh /var/log` shows total size of existing logs.
+* `df -h /var/log` shows filesystem usage and free space.
 
+3. Based on these outputs, choose a target size for the new `/var/log` partition (e.g., if logs use \~10 GiB, you might allocate 15–20 GiB or more).
 
-### Phase 1: Prepare the Environment (Live USB)
+#### b. Backup Existing `/var/log` Data (Optional: from Installed System or Live USB)
+
+It’s prudent to back up `/var/log` before changes. You can back up now or later in the Live USB environment.
+
+* If backing up now (while booted normally), ensure `<BACKUP_DESTINATION>` is accessible:
+
+  ```bash
+  sudo rsync -avh --progress /var/log/ <BACKUP_DESTINATION>/varlog_backup_$(date +%F)/
+  du -sh <BACKUP_DESTINATION>/varlog_backup_$(date +%F)/
+  ```
+* Or wait until Live USB: after mounting the Ubuntu root (see next section), run:
+
+  ```bash
+  sudo rsync -avh --progress /mnt/ubuntu_root/var/log/ <BACKUP_DESTINATION>/varlog_backup_$(date +%F)/
+  du -sh /mnt/ubuntu_root/var/log
+  du -sh <BACKUP_DESTINATION>/varlog_backup_$(date +%F)/
+  ```
+
+> **Tip:** Replace `<BACKUP_DESTINATION>` with your actual backup path (e.g., `/media/ubuntu/BackupDrive` or `user@server:/path/`).
+
+---
+
+### 2. Boot Live USB and (Re-)Backup `/var/log` from Live Environment
 
 1. **Boot from Ubuntu Live USB (Try Ubuntu):**
 
-   * You cannot modify partitions that are in use by the running OS.
+   * Required because you cannot modify partitions mounted by the running OS.
+2. **(Optional) Mount the Ubuntu Root and Backup `/var/log`:**
 
-2. **Open GParted:**
+   * Identify your root partition (e.g., via `lsblk` or `sudo fdisk -l`), referred to as `<ROOT_PARTITION>`.
+   * Mount it:
 
-   * Launch **GParted** from the Live Ubuntu desktop.
+     ```bash
+     sudo mkdir -p /mnt/ubuntu_root
+     sudo mount /dev/<ROOT_PARTITION> /mnt/ubuntu_root
+     ```
+   * Ensure `<BACKUP_DESTINATION>` is available/mounted.
+   * Back up:
 
----
+     ```bash
+     sudo rsync -avh --progress /mnt/ubuntu_root/var/log/ <BACKUP_DESTINATION>/varlog_backup_$(date +%F)/
+     du -sh /mnt/ubuntu_root/var/log
+     du -sh <BACKUP_DESTINATION>/varlog_backup_$(date +%F)/
+     ```
+   * Unmount if desired:
 
-### Phase 2: Partitioning with GParted (Partition for `/var/log`)
+     ```bash
+     sudo umount /mnt/ubuntu_root
+     ```
+3. **Launch GParted:**
 
-1. **Identify Your Existing Root Partition:**
-
-   * Locate your Ubuntu root (e.g., `/dev/nvme0n1p5`).
-
-2. **Shrink the Root Partition (if not already done):**
-
-   * Right-click `/dev/nvme0n1p5` → **Resize/Move**.
-   * Free up at least **15 GiB** for `/var/log` (e.g., `15360 MiB`).
-   * Click **Resize/Move**, then **Apply All Operations**.
-
-3. **Create New Partition for `/var/log`:**
-
-   * In the freed space:
-
-     * Right-click **unallocated** → **New**.
-     * Set **New size (MiB)** to `15360` (for 15 GiB).
-     * Set **File system** to `ext4`.
-     * Set **Label** to `VARLOG`.
-     * Click **Add**, then **Apply All Operations**.
-
-> **Tip:** Ensure journaling is enabled (default in ext4) so logs aren’t lost.
+   * From the Live desktop, open **GParted**.
 
 ---
 
-### Phase 3: Data Migration and `fstab` Configuration
+### 3. Partitioning with GParted
 
-1. **Identify the New `/var/log` Device and UUID:**
+#### a. Identify and Shrink the Existing Root Partition (if needed)
 
-   * After creation, GParted will list it (e.g., `/dev/nvme0n1p8`).
-   * Right-click → **Information** → copy the **UUID**.
+1. In GParted, locate your Ubuntu root partition (`<ROOT_PARTITION>`).
+2. If you haven’t already freed space for `/var/log`, right-click `<ROOT_PARTITION>` → **Resize/Move**.
+3. Free at least the size you planned (e.g., 15360 MiB for \~15 GiB). In **Free Space Following (MiB)** enter that value.
+4. Click **Resize/Move**, then Apply All Operations.
+
+#### b. Create New Partition for `/var/log`
+
+1. In the unallocated space:
+
+   * Right-click **unallocated** → **New**.
+   * Set **New size (MiB)** to your chosen size (e.g., `15360` for \~15 GiB).
+   * Set **File system** to `ext4`.
+   * (Optional) Set **Label** to `VARLOG_PART` or leave blank.
+   * Click **Add**.
+2. Click the green checkmark (Apply All Operations) to create and format.
+3. Note the device name assigned (e.g., `/dev/sdXN`); refer to it as `<NEW_VARLOG_PARTITION>`.
+
+> **Note:** Use placeholders: replace `<ROOT_PARTITION>` and `<NEW_VARLOG_PARTITION>` with the actual device paths you see (e.g., `/dev/sda3`, `/dev/sda7`).
+
+---
+
+### 4. Data Migration and `fstab` Update
+
+1. **Find the UUID of the New Partition:**
+
+   * In GParted, right-click `<NEW_VARLOG_PARTITION>` → **Information** → copy **UUID**.
+   * Or in terminal:
+
+     ```bash
+     sudo blkid /dev/<NEW_VARLOG_PARTITION>
+     ```
+
+     and note `UUID="..."`.
 
 2. **Mount Partitions in Live USB Terminal:**
 
    ```bash
-   sudo mkdir /mnt/ubuntu_root
-   sudo mount /dev/nvme0n1p5 /mnt/ubuntu_root         # Mount existing root
-   sudo mkdir /mnt/new_varlog
-   sudo mount /dev/nvme0n1p8 /mnt/new_varlog           # Mount new /var/log
+   sudo mkdir -p /mnt/ubuntu_root
+   sudo mount /dev/<ROOT_PARTITION> /mnt/ubuntu_root
+   sudo mkdir -p /mnt/new_varlog
+   sudo mount /dev/<NEW_VARLOG_PARTITION> /mnt/new_varlog
    ```
 
-3. **Copy `/var/log` Data:**
+3. **Copy Existing `/var/log` Data:**
 
    ```bash
    sudo rsync -avh --progress /mnt/ubuntu_root/var/log/ /mnt/new_varlog/
    ```
 
-   * **Verify** sizes:
+   * Verify sizes:
 
      ```bash
      du -sh /mnt/ubuntu_root/var/log
      du -sh /mnt/new_varlog
      ```
+   * Ensure data matches or is very close.
 
-4. **Rename Original `/var/log`:**
+4. **Rename (Backup) Original `/var/log`:**
 
    ```bash
    sudo mv /mnt/ubuntu_root/var/log /mnt/ubuntu_root/var/log_old
    ```
 
-   * Serves as a backup. After verifying, remove `/var/log_old`.
+   * Keeps a fallback. Delete `var/log_old` after confirming success.
 
-5. **Update `fstab` of Installed System:**
+5. **Edit `fstab` in the Installed System:**
 
    ```bash
    sudo nano /mnt/ubuntu_root/etc/fstab
    ```
 
-   * Add an entry (replace `<UUID>` with the actual UUID or replace `UUID=<UUID>` with device name `/dev/nvme0n1pX`):
+   * Add a line for `/var/log`. You can choose:
 
-     ```
-     UUID=<UUID>    /var/log    ext4    defaults,nosuid,nodev,noexec    0   2
-     ```
-   * Save (Ctrl+O) and exit (Ctrl+X).
+     * **UUID entry** (robust if device names change):
+
+       ```
+       UUID=<UUID_OF_NEW_VARLOG>    /var/log    ext4    defaults,nosuid,nodev,noexec    0   2
+       ```
+     * **Direct device path** (simpler but may break if naming shifts):
+
+       ```
+       /dev/<NEW_VARLOG_PARTITION>    /var/log    ext4    defaults,nosuid,nodev,noexec    0   2
+       ```
+   * **Reasoning**:
+
+     * **UUID**: Stable across reboots, unaffected by disk order changes. Preferred for reliability.
+     * **Device path**: Easier to type initially, but if disk enumeration changes, mount could fail.
+   * Save and exit (Ctrl+O, Enter; Ctrl+X).
 
 6. **Unmount and Reboot:**
 
@@ -109,21 +175,38 @@ Verify the backup completed successfully before moving on.
 
 ---
 
-### Phase 4: Verification
+### 5. Post-Reboot Verification
 
-1. After rebooting regularly:
+1. After booting into your installed Ubuntu:
 
    ```bash
    df -h | grep "/var/log"
-   ls -ls /var/log
+   ls -la /var/log
    ```
 
-   * Ensure `/var/log` is mounted separately and contains your log files.
-
-2. If successful, remove the backup:
+   * Confirm `/var/log` is a separate mount with expected contents.
+2. If all works, remove the backup copy:
 
    ```bash
    sudo rm -rf /var/log_old
    ```
 
-Now your `/var/log` directory resides on its own partition.
+   * Only after verifying that logging services operate normally.
+
+---
+
+### Summary of Placeholder Conventions
+
+* `<ROOT_PARTITION>`: your existing root filesystem partition (e.g., `/dev/sda3`, `/dev/nvme0n1p5`).
+* `<NEW_VARLOG_PARTITION>`: the newly created partition for `/var/log` (e.g., `/dev/sda7`, `/dev/nvme0n1p8`).
+* `<UUID_OF_NEW_VARLOG>`: filesystem UUID of `<NEW_VARLOG_PARTITION>`, from GParted or `blkid`.
+* `<BACKUP_DESTINATION>`: path or mount point where backups are stored (e.g., `/media/ubuntu/BackupDrive` or `user@server:/backups`).
+
+> **Tips:**
+>
+> * Double-check device identifiers before destructive operations.
+> * Ensure reliable backup before partition changes.
+> * Choose partition size based on current `/var/log` usage plus growth expectations.
+> * To revert during testing, restore `/var/log_old` back to `/var/log` and remove the fstab line.
+
+
